Add .gitignore and clean untracked files

--- a/templates/stb_database_app/navigation.html
+++ b/templates/stb_database_app/navigation.html
@@ -173,7 +173,7 @@
         <div class="nav-grid">
             <a href="{% url 'base' %}"><div class="nav-item">📚 База</div></a>
             <a href="{% url 'races' %}"><div class="nav-item">🗿 Расы/Камни</div></a>
-            <div class="nav-item">😇 Аэдра</div>
+            <a href="{% url 'aedra' %}"><div class="nav-item">😇 Аэдра</div></a>
             <div class="nav-item">😈 Даэдра</div>
 
             <div class="nav-item">🧛🐺 Проклятые</div>
